<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SAI</string>
    <string name="app_name_full" translatable="false">APKGosu xapk install</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="help">Help</string>
    <string name="error">Error</string>
    <string name="copy2">Copy</string>
    <string name="alert" >Thông báo</string>
    <string name="access" tools:ignore="MissingTranslation">Đồng ý</string>
    <string name="syns" tools:ignore="MissingTranslation">Từ android 12 hệ thống sẽ khởi động lại để cấp quyền truy cập file obb.</string>
    <string name="copied">Copied</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="warning">Warning</string>
    <string name="set_up_obb" translatable="false">Set up file Obb</string>
    <string name="filepicker_internal">Internal file picker</string>
    <string name="filepicker_saf">System file picker</string>
    <string name="permissions_required_storage">SAI requires permission to access storage</string>
    <string name="permissions_required_shizuku">SAI requires permission to use Shizuku Server</string>
    <string name="main_installer">Installer</string>
    <string name="main_backup">Backup</string>
    <string name="main_navigation_disabled">Unable to perform open with during ongoing installation</string>
    <string name="installer_installation_confirmation">Install \"%s\"?</string>
    <string name="installer_installation_failed">App not installed</string>
    <string name="installer_installation_in_progress">Installing…</string>
    <string name="installer_install_apks">Install APKs</string>
    <string name="installer_help"><b>What is SAI?</b>\nSAI (Split APKs Installer) is an app that lets you install multiple APKs as if it was a single package. This is useful for installing apps that are distributed as App Bundles since Android provides no built-in way to install them from sources other than Google Play.\n\n<b>How to use SAI?</b>\nClick \"Install APKs\" button and select base APK and additional configuration-specific APKs or a ZIP archive that contains all required APKs, then click \"Select\" button to start installation process.\n\n<b>.apks</b>\nYou can rename a .zip archive that contains .apk files to .apks (e.g.: somesplitapp.zip -> somesplitapp.apks), so it can be opened with SAI from other apps.\n\n<b>Installing apps from external storage</b>\nYou can long click install button to select files via system file picker that supports external storage.</string>
    <string name="installer_pick_apks">Select files to install</string>
    <string name="installer_app_installed">App installed</string>
    <string name="installer_open">Open</string>
    <string name="installer_app_installed_full">%s has been installed</string>
    <string name="installer_no_root">Unable to acquire root access, proceeding with rootless installer</string>
    <string name="installer_error_generic">Installation failed</string>
    <string name="installer_error_aborted">Installation was cancelled by user</string>
    <string name="installer_error_blocked">Installation was blocked by %s</string>
    <string name="installer_error_blocked_device">device</string>
    <string name="installer_error_conflict">Unable to install the app because it conflicts with an already installed app with same package name</string>
    <string name="installer_error_incompatible">Application is incompatible with this device</string>
    <string name="installer_error_bad_apks">Invalid APK files selected</string>
    <string name="installer_error_storage">Not enough storage space to install the app</string>
    <string name="installer_error_lidl_rom">Your ROM is incompatible with rootless installer. Try selecting another installer in SAI settings.</string>
    <string name="installer_error_shell">%1$s installer error:\n\n %2$s</string>
    <string name="installer_error_rootless">Rootless installer error:\n\n %s</string>
    <string name="installer_error_root_no_root">Unable to acquire root access</string>
    <string name="installer_error_shizuku_unavailable">Unable to access Shizuku Server, please make sure it\'s running and SAI is authorized to use it</string>
    <string name="installer_error_while_extracting">Error while extracting APK files from ZIP: %s</string>
    <string name="installer_error_zip_contains_no_apks">ZIP doesn\'t contain any apk files</string>
    <string name="installer_error_mixed_extensions">You must select either a single .zip/.apks file or multiple .apk files</string>
    <string name="installer_error_installer2_mixed_extensions_internal">You have to select one or more .apk/.apks/.zip files, no mixed extensions allowed</string>
    <string name="installer_error_installer2_mixed_extensions_saf">You have to select either a single .zip/.apks file or multiple .apk files</string>
    <string name="installer_error_unknown_apk_size">Unable to get APK size from the archive, please enable \"Extract APKs from archives\" setting and try again</string>
    <string name="installer_select_theme">Select theme</string>
    <string name="installer_device">Device</string>
    <string name="installer_miui_warning_title">MIUI detected</string>
    <string name="installer_miui_warning_message"><b>Seriously, read this one-time warning!</b>\n\nSorry for taking your time, but I\'m really tired of people with MIUI who have been skipping the previous version of this warning.\n\nLooks like your device is running MIUI. MIUI is known for breaking standard Android API features and a lot of SAI users have reported installations failing on MIUI for no reason with \"Installation failed\". Usually it can be fixed by disabling MIUI optimizations in developer settings, which I suggest you should do.\n\nOf course you can try using SAI without disabling MIUI optimization, but if it doesn\'t work, try disabling it before complaining to me about failed installations. If your MIUI version doesn\'t have that toggle or it doesn\'t help, there\'s nothing I can do.\n\nThis issue is supposed to be fixed on MIUI 20.2.20 and up (xiaomi.eu and eu-based ROMs).</string>
    <string name="installer_miui_warning_open_dev_settings">Open developer settings</string>
    <string name="installer_miui_warning_oof">Unable to open developer settings. You can try opening them manually, google how to do that.</string>
    <string name="installer_unknown_app">Unknown app</string>
    <string name="installer_state_created">Preparing</string>
    <string name="installer_state_queued">Queued</string>
    <string name="installer_state_installing">Installing</string>
    <string name="installer_state_installed">Installed</string>
    <string name="installer_state_failed">Failed to install</string>
    <string name="installer_unable_to_launch_app">Unable to launch app</string>
    <string name="installer_show_full_error">Show full error</string>
    <string name="installer_placeholder_text">No installer sessions</string>
    <string name="installer_saf_tip">Long click to use system file picker.\n(Click this tooltip to hide it forever)</string>
    <string name="installer_recoverable_error_use_zipfile">Archive can\'t be read the normal way. Please enable \"Use ZipFile API\" toggle in settings and try again.</string>
    <string name="installer_rootless_error2_unknown">Unknown error</string>
    <string name="installer_rootless_error2_install_failed_already_exists">This package is already installed</string>
    <string name="installer_rootless_error2_install_failed_invalid_apk">APK file is not valid</string>
    <string name="installer_rootless_error2_install_failed_invalid_uri">Passed URI is not valid</string>
    <string name="installer_rootless_error2_install_failed_insufficient_storage">Device doesn\'t have enough space to install the app</string>
    <string name="installer_rootless_error2_install_failed_duplicate_package">Package with the same name is already installed</string>
    <string name="installer_rootless_error2_install_failed_no_shared_user">Shared user requested by package doesn\'t exist</string>
    <string name="installer_rootless_error2_install_failed_update_incompatible">App signature doesn\'t match the signature of an already installed app with the same package name</string>
    <string name="installer_rootless_error2_install_failed_shared_user_incompatible">App has requested an already existing shared user, but their signatures don\'t match</string>
    <string name="installer_rootless_error2_install_failed_missing_shared_library">App has requested a shared library that is not installed on the device</string>
    <string name="installer_rootless_error2_install_failed_replace_couldnt_delete">The system was unable to delete the previous version of this package</string>
    <string name="installer_rootless_error2_install_failed_dexopt">Installation failed while optimizing and validating package dex files, either because there was not enough storage or the validation failed</string>
    <string name="installer_rootless_error2_install_failed_older_sdk">Device Android version is lower than required by the package</string>
    <string name="installer_rootless_error2_install_failed_conflicting_provider">Package contains a content provider with the same authority as a provider already installed in the system</string>
    <string name="installer_rootless_error2_install_failed_newer_sdk">Device Android version is higher than required by the package</string>
    <string name="installer_rootless_error2_install_failed_test_only">Installed package is test-only and INSTALL_ALLOW_TEST flag was not supplied</string>
    <string name="installer_rootless_error2_install_failed_cpu_abi_incompatible">Package doesn\'t contain native code that is compatible with this device\'s CPU</string>
    <string name="installer_rootless_error2_install_failed_missing_feature">Package requires a feature that is not supported by this device</string>
    <string name="installer_rootless_error2_install_failed_container_error">Secure container mount point couldn\'t be accessed on external media</string>
    <string name="installer_rootless_error2_install_failed_invalid_install_location">Package couldn\'t be installed in the specified location</string>
    <string name="installer_rootless_error2_install_failed_media_unavailable">Package couldn\'t be installed in the specified location because the media is not available</string>
    <string name="installer_rootless_error2_install_failed_verification_timeout">Package verification timed out</string>
    <string name="installer_rootless_error2_install_failed_verification_failure">Package has failed verification</string>
    <string name="installer_rootless_error2_install_failed_package_changed">Package installation path unexpectedly changed</string>
    <string name="installer_rootless_error2_install_failed_uid_changed">Package was assigned a different UID than it previously held</string>
    <string name="installer_rootless_error2_install_failed_version_downgrade">A newer version of this package is already installed</string>
    <string name="installer_rootless_error2_install_failed_permission_model_downgrade">New version of the package doesn\'t support runtime permissions but the currently installed version does</string>
    <string name="installerx_dialog_choose_filepicker">How do you want to select files to install?</string>
    <string name="installerx_dialog_loading">Parsing APKs…</string>
    <string name="installerx_dialog_error">SAI has encountered an unexpected error while trying to parse selected file(s)</string>
    <string name="installerx_dialog_warn_parsing_fail">SAI was unable to parse selected file. Do you want to try to install it anyway, without customization?</string>
</resources>