<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/ib_help"
            style="@style/SAICoolbarImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/help"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_setting_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/app_name_full"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ib_toggle_theme"
            style="@style/SAICoolbarImageButton"
            android:layout_weight="1"
            android:contentDescription="@string/installer_select_theme"
            android:rotation="30"
            app:srcCompat="@drawable/ic_dark_theme" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_installer_sessions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_title"
        android:layout_weight="1"
        android:visibility="gone">

    </androidx.recyclerview.widget.RecyclerView>

    <FrameLayout
        android:id="@+id/container_installer_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_title"
        android:layout_weight="1"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_installer_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/installer_placeholder_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_install"
        style="@style/SAIMaterialButton.ExtendedFab"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/installer_install_apks"
        android:layout_above="@id/bottomnav_main"
        app:icon="@drawable/ic_install_full"
        app:iconSize="16dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnav_main"
        style="@style/SAIBottomNavigationView"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation" />
</RelativeLayout>