<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_reg_radius_10_white"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_clear_selection" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/alert"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/syns"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_access"
        style="@style/SAIMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/access"
        android:textAllCaps="true" />
</LinearLayout>